Cryptography, Finance, General, Security

--- a/index.html
+++ b/index.html
@@ -57,6 +57,26 @@
       </ul>
     </div>
     <div id="step-div">
+      <p>Cryptography</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Cryptography/FiatShamirZKP.html"><span class="bold">Fiat-Shamir
+            Zero Knowledge Proof</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Cryptography/EllipticCurve.html"><span class="bold">FUNtastic
+            Elliptic Curves</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Cryptography/SecretSharing.html"><span class="bold">Shamir's Secret
+            Sharing Unraveled</span></a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
       <p>Deep Learning</p>
     </div>
     <br/>
@@ -112,6 +132,22 @@
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Ethereum/BesuPrivateCliqueDocker.html"><span class="bold">Hyperledger
             Besu Private Network using Docker</span></a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
+      <p>Finance</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Finance/Payments-101.html"><span class="bold">Card and Mobile
+            Payments Flow 101</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Finance/SVB-Collapse.html"><span class="bold">Silicon Valley Bank
+            Collapse Explained</span></a></p>
         </li>
       </ul>
     </div>
@@ -176,6 +212,14 @@
         <li>
           <p><a target="_blank" href="https://www.linkedin.com/pulse/cautionary-reminder-major-updates-prod-bhaskar-swaminathan-msbfe">
             <span class="bold">Cautionary Reminder on Major Updates to Prod !!!</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/General/RipMiniDV.html"><span class="bold">Ripping MiniDV to
+            Digital Format</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/General/Pi-Hole.html"><span class="bold">Pi-hole using Docker on
+            ODroid-C2</span></a></p>
         </li>
       </ul>
     </div>
@@ -296,6 +340,10 @@
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Security/OAuth2-OIDC.html"><span class="bold">Understanding
             OAuth2 and OpenID Connect</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Security/Chisel-Tunnel.html"><span class="bold">Tunneling with
+            Chisel</span></a></p>
         </li>
       </ul>
     </div>
