Cassandra, Drools, Golang, gRPC, SpringAI

--- a/index.html
+++ b/index.html
@@ -37,6 +37,30 @@
       </ul>
     </div>
     <div id="step-div">
+      <p>Cassandra</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Cassandra/Cassandra-4.html"><span class="bold">Cassandra Quick
+            Notes :: Part - 4</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Cassandra/Cassandra-3.html"><span class="bold">Cassandra Quick
+            Notes :: Part - 3</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Cassandra/Cassandra-2.html"><span class="bold">Cassandra Quick
+            Notes :: Part - 2</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Cassandra/Cassandra-1.html"><span class="bold">Cassandra Quick
+            Notes :: Part - 1</span></a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
       <p>Chatbot</p>
     </div>
     <br/>
@@ -120,6 +144,30 @@
       </ul>
     </div>
     <div id="step-div">
+      <p>Drools</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Drools/Drools-4.html"><span class="bold">Java Rules Engine - Drools
+            :: Part 4</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Drools/Drools-3.html"><span class="bold">Java Rules Engine - Drools
+            :: Part 3</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Drools/Drools-2.html"><span class="bold">Java Rules Engine - Drools
+            :: Part 2</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Drools/Drools-1.html"><span class="bold">Java Rules Engine - Drools
+            :: Part 1</span></a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
       <p>Ethereum</p>
     </div>
     <br/>
@@ -128,6 +176,10 @@
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Ethereum/AnvilSolidityPython.html"><span class="bold">Using Anvil
             and Solidity with Python</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Ethereum/Clique.html"><span class="bold">Proof of Authority Consensus
+            - Clique</span></a></p>
         </li>
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Ethereum/BesuPrivateCliqueDocker.html"><span class="bold">Hyperledger
@@ -224,15 +276,55 @@
       </ul>
     </div>
     <div id="step-div">
-      <p>Java</p>
+      <p>Golang</p>
     </div>
     <br/>
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Java/PragmaticSpringAI.html"><span class="bold">Pragmatic Bytes
-            on Spring AI</span></a></p>
+          <p><a target="_blank" href="https://polarsparc.github.io/Golang/Go-Context.html"><span class="bold">Golang - Standard Library
+            context Package</span></a></p>
         </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Golang/MethodSets.html"><span class="bold">Golang - Method Sets and
+            Interfaces</span></a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
+      <p>gRPC</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p><a href="https://polarsparc.github.io/gRPC/gRPC-4.html" target="_blank"><span class="bold">Introduction to gRPC - Part
+            4</span></a></p>
+        </li>
+        <li>
+          <p><a href="https://polarsparc.github.io/gRPC/gRPC-3.html" target="_blank"><span class="bold">Introduction to gRPC - Part
+            3</span></a></p>
+        </li>
+        <li>
+          <p><a href="https://polarsparc.github.io/gRPC/gRPC-2.html" target="_blank"><span class="bold">Introduction to gRPC - Part
+            2</span></a></p>
+        </li>
+        <li>
+          <p><a href="https://polarsparc.github.io/gRPC/gRPC-1.html" target="_blank"><span class="bold">Introduction to gRPC - Part
+            1</span></a></p>
+        </li>
+        <li>
+          <p><a href="https://polarsparc.github.io/gRPC/Protobuf3.html" target="_blank"><span class="bold">Introduction to Google
+            Protocol Buffers</span></a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
+      <p>Java</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Java/MethodHandle.html"><span class="bold">Quick Primer on Java
             Method Handles</span></a></p>
@@ -344,6 +436,18 @@
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Security/Chisel-Tunnel.html"><span class="bold">Tunneling with
             Chisel</span></a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
+      <p>SpringAI</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/SpringAI/PragmaticSpringAI.html"><span class="bold">Pragmatic
+            Bytes on Spring AI</span></a></p>
         </li>
       </ul>
     </div>
