Linux, MCP, MinIO, Networking

--- a/index.html
+++ b/index.html
@@ -241,6 +241,10 @@
           <p><a target="_blank" href="https://polarsparc.github.io/GenAI/RunFlux.html"><span class="bold">Quick Tip :: Running Text-to-Image
             Diffusion Model on a Local Machine</span></a></p>
         </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/GenAI/HuggingFace.html"><span class="bold">Quick Primer on Hugging
+            Face</span></a></p>
+        </li>
       </ul>
     </div>
     <div id="step-div">
@@ -352,6 +356,33 @@
       </ul>
     </div>
     <div id="step-div">
+      <p>Linux</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Linux/eBPF.html"><span class="bold">Hands-on with eBPF</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Linux/Linux-Capabilities.html"><span class="bold">Linux Capabilities
+            Unraveled</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Linux/Linux-IPTables.html"><span class="bold">Fundamentals of
+            Linux iptables Firewall</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Linux/Containers-2.html"><span class="bold">Building a Linux
+            Container using Namespaces :: Part - 2</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Linux/Containers-1.html"><span class="bold">Building a Linux
+            Container using Namespaces :: Part - 1</span></a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
       <p>Mathematics</p>
     </div>
     <br/>
@@ -404,6 +435,45 @@
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/Perms_Combs.html"><span class="bold">Introduction to
             Permutations & Combinations</span></a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
+      <p>MCP</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/MCP/MCP.html"><span class="bold">Quick Primer on Model Context
+            Protocol (MCP)</span></a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
+      <p>MinIO</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/MinIO/MinIO.html"><span class="bold">Hands-on with MinIO</span></a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
+      <p>Networking</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Networking/NMAP.html"><span class="bold">Hands-on with Nmap</span>
+          </a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Networking/SSH-Tunnel.html"><span class="bold">SSH Tunneling Basics
+            </span></a></p>
         </li>
       </ul>
     </div>
