--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
       <img src="./images/polarsparc.png" />
     </div>
     <br/>
+    <br/>
+    <div id="title-div">
+      <p>Articles | Notes | Tips | Tutorials</p>
+    </div>
+    <br/>
     <div id="step-div">
       <p>Blockchain</p>
     </div>
@@ -518,6 +523,18 @@
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/SpringAI/PragmaticSpringAI.html"><span class="bold">Pragmatic
             Bytes on Spring AI</span></a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
+      <p>Terraform</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Terraform/Terraform-Intro.html"><span class="bold">Introduction
+            to Terraform</span></a></p>
         </li>
       </ul>
     </div>
