AWS, General, Spring Integration

--- a/index.html
+++ b/index.html
@@ -30,6 +30,94 @@
     </div>
     <br/>
     <div id="step-div">
+      <p>AWS</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/AWS/AWS-Cheatsheet-3.pdf"><span class="bold">AWS CLF-C02 and AWS
+            SAA-C03 Cheatsheet - 3</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/AWS/AWS-Cheatsheet-2.pdf"><span class="bold">AWS CLF-C02 and AWS
+            SAA-C03 Cheatsheet - 2</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/AWS/AWS-Cheatsheet-1.pdf"><span class="bold">AWS CLF-C02 and AWS
+            SAA-C03 Cheatsheet - 1</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/AWS/AWS-DAM.html"><span class="bold">AWS Deployment and Migration
+            - Quick Notes</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/AWS/AWS-MON.html"><span class="bold">AWS Logging and Monitoring
+            - Quick Notes</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/AWS/AWS-SEC.html"><span class="bold">AWS Security - Quick Notes
+            </span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/AWS/AWS-MLN.html"><span class="bold">AWS Machine Learning - Quick
+            Notes</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/AWS/AWS-ANL.html"><span class="bold">AWS Analytics - Quick Notes
+            </span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/AWS/AWS-DBS.html"><span class="bold">AWS Databases - Quick Notes
+            </span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/AWS/AWS-INT.html"><span class="bold">AWS Application Integration
+            - Quick Notes</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/AWS/AWS-LMB.html"><span class="bold">AWS Lambda - Quick Notes
+            </span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/AWS/AWS-CKS.html"><span class="bold">AWS Container and Kubernetes
+            Services - Quick Notes</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/AWS/AWS-CDN.html"><span class="bold">AWS CloudFront and Global
+            Accelerator - Quick Notes</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/AWS/AWS-R53.html"><span class="bold">AWS Route 53 - Quick Notes
+            </span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/AWS/AWS-IAM.html"><span class="bold">AWS Identity and Access
+            Management (IAM) - Quick Notes</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/AWS/AWS-VPC.html"><span class="bold">AWS Virtual Private Cloud
+            (VPC) - Quick Notes</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/AWS/AWS-ELB.html"><span class="bold">AWS Elastic Load Balancer
+            (ELB) - Quick Notes</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/AWS/AWS-BFS.html"><span class="bold">AWS Block and File Storage
+            - Quick Notes</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/AWS/AWS-EC2.html"><span class="bold">AWS Elastic Compute Cloud
+            (EC2) - Quick Notes</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/AWS/AWS-S3.html"><span class="bold">AWS Simple Storage Service
+            (S3) - Quick Notes</span></a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
       <p>Blockchain</p>
     </div>
     <br/>
@@ -282,6 +370,14 @@
           <p><a target="_blank" href="https://polarsparc.github.io/General/Pi-Hole.html"><span class="bold">Pi-hole using Docker on
             ODroid-C2</span></a></p>
         </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/General/N2-Cluster.html"><span class="bold">Building a ODroid N2
+            Cluster</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/General/XU4-Cluster.html"><span class="bold">Building a ODroid
+            XU4 Cluster</span></a></p>
+        </li>
       </ul>
     </div>
     <div id="step-div">
@@ -523,6 +619,46 @@
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/SpringAI/PragmaticSpringAI.html"><span class="bold">Pragmatic
             Bytes on Spring AI</span></a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
+      <p>Spring Integration</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/SpringIntegration/SpringIntegration-08.html"><span class="bold">
+            Spring Integration Notes :: Part - 8</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/SpringIntegration/SpringIntegration-07.html"><span class="bold">
+            Spring Integration Notes :: Part - 7</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/SpringIntegration/SpringIntegration-06.html"><span class="bold">
+            Spring Integration Notes :: Part - 6</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/SpringIntegration/SpringIntegration-05.html"><span class="bold">
+            Spring Integration Notes :: Part - 5</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/SpringIntegration/SpringIntegration-04.html"><span class="bold">
+            Spring Integration Notes :: Part - 4</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/SpringIntegration/SpringIntegration-03.html"><span class="bold">
+            Spring Integration Notes :: Part - 3</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/SpringIntegration/SpringIntegration-02.html"><span class="bold">
+            Spring Integration Notes :: Part - 2</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/SpringIntegration/SpringIntegration-01.html"><span class="bold">
+            Spring Integration Notes :: Part - 1</span></a></p>
         </li>
       </ul>
     </div>
