Big Data, Kafka Streams, Python

--- a/index.html
+++ b/index.html
@@ -118,6 +118,18 @@
       </ul>
     </div>
     <div id="step-div">
+      <p>Big Data</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/BigData/ApacheParquet.html"><span class="bold">Introduction to
+            Apache Parquet</span></a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
       <p>Blockchain</p>
     </div>
     <br/>
@@ -206,6 +218,10 @@
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/DeepLearning/DL-Convolutional.html"><span class="bold">Deep Learning
             - Convolutional Neural Network</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/DeepLearning/Quantization.html"><span class="bold">Understanding Model
+            Quantization</span></a></p>
         </li>
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/DeepLearning/DeepLearning-2.html"><span class="bold">Introduction
@@ -457,6 +473,42 @@
       </ul>
     </div>
     <div id="step-div">
+      <p>Kafka Streams</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/KafkaStreams/KafkaStreams-7.html"><span class="bold">Exploring
+            Kafka Streams :: Part 7</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/KafkaStreams/KafkaStreams-6.html"><span class="bold">Exploring
+            Kafka Streams :: Part 6</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/KafkaStreams/KafkaStreams-5.html"><span class="bold">Exploring
+            Kafka Streams :: Part 5</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/KafkaStreams/KafkaStreams-4.html"><span class="bold">Exploring
+            Kafka Streams :: Part 4</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/KafkaStreams/KafkaStreams-3.html"><span class="bold">Exploring
+            Kafka Streams :: Part 3</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/KafkaStreams/KafkaStreams-2.html"><span class="bold">Exploring
+            Kafka Streams :: Part 2</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/KafkaStreams/KafkaStreams-1.html"><span class="bold">Exploring
+            Kafka Streams :: Part 1</span></a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
       <p>Linux</p>
     </div>
     <br/>
@@ -591,6 +643,30 @@
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Python/Gradio.html"><span class="bold">Quick Primer on Gradio</span>
             </a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Python/Pandas-DF-Styling.html"><span class="bold">Pandas DataFrame
+            Styling</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Python/APScheduler.html"><span class="bold">Using Python APScheduler
+            </span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Python/Pydantic.html"><span class="bold">Hands-on with Pydantic</span>
+            </a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Python/Requests.html"><span class="bold">Hands-on with Python
+            Requests</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Python/Celery.html"><span class="bold">Distributed Task Processing
+            using Celery</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Python/Asyncio.html"><span class="bold">Introduction to Asyncio
+            in Python</span></a></p>
         </li>
       </ul>
     </div>
