--- a/index.html
+++ b/index.html
@@ -118,18 +118,6 @@
       </ul>
     </div>
     <div id="step-div">
-      <p>Big Data</p>
-    </div>
-    <br/>
-    <div id="para-div">
-      <ul id="blue-sqr-ul">
-        <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/BigData/ApacheParquet.html"><span class="bold">Introduction to
-            Apache Parquet</span></a></p>
-        </li>
-      </ul>
-    </div>
-    <div id="step-div">
       <p>Blockchain</p>
     </div>
     <br/>
@@ -202,6 +190,18 @@
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Cryptography/SecretSharing.html"><span class="bold">Shamir's Secret
             Sharing Unraveled</span></a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
+      <p>Data</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Data/ApacheParquet.html"><span class="bold">Introduction to Apache
+            Parquet</span></a></p>
         </li>
       </ul>
     </div>
@@ -558,8 +558,44 @@
             to Trigonometry</span></a></p>
         </li>
         <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/ModularArithmetic.html"><span class="bold">Number
+            Theory :: Modular Arithmetic</span></a></p>
+        </li>
+        <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/BinomialTheorem.html"><span class="bold">Binomial
             Theorem Unravelled</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/BayesTheorem.html"><span class="bold">Introduction
+            to Bayes Theorem</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/LinearAlgebra-5.html"><span class="bold">Introduction
+            to Linear Algebra - Part 5</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/LinearAlgebra-4.html"><span class="bold">Introduction
+            to Linear Algebra - Part 4</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/LinearAlgebra-3.html"><span class="bold">Introduction
+            to Linear Algebra - Part 3</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/LinearAlgebra-2.html"><span class="bold">Introduction
+            to Linear Algebra - Part 2</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/LinearAlgebra-1.html"><span class="bold">Introduction
+            to Linear Algebra - Part 1</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/Calculus-5.html"><span class="bold">Introduction to
+            Calculus - Part 5</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/Calculus-4.html"><span class="bold">Introduction to
+            Calculus - Part 4</span></a></p>
         </li>
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/Calculus-3.html"><span class="bold">Introduction to
@@ -572,6 +608,26 @@
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/Calculus-1.html"><span class="bold">Introduction to
             Calculus - Part 1</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/Statistics-7.html"><span class="bold">Introduction
+            to Statistics - Part 7</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/Statistics-6.html"><span class="bold">Introduction
+            to Statistics - Part 6</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/Statistics-5.html"><span class="bold">Introduction
+            to Statistics - Part 5</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/Statistics-4.html"><span class="bold">Introduction
+            to Statistics - Part 4</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/Statistics-3.html"><span class="bold">Introduction
+            to Statistics - Part 3</span></a></p>
         </li>
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/Statistics-2.html"><span class="bold">Introduction
