--- a/index.html
+++ b/index.html
@@ -224,6 +224,62 @@
             Quantization</span></a></p>
         </li>
         <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/DeepLearning/DL-Transformers.html"><span class="bold">Deep Learning
+            - Understanding the Transformer Models</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/DeepLearning/DL-Seq2Seq.html"><span class="bold">Deep Learning -
+            Sequence-to-Sequence Model</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/DeepLearning/DL-GatedRecurrent.html"><span class="bold">Deep Learning
+            - Gated Recurrent Unit</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/DeepLearning/DL-LSTM-NextWord.html"><span class="bold">Deep Learning
+            - Predict Next Word Using LSTM</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/DeepLearning/DL-Bidirectional-RNN.html"><span class="bold">Deep
+            Learning - Bidirectional Recurrent Neural Network</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/DeepLearning/DL-Word2Vec.html"><span class="bold">Deep Learning -
+            Word Embeddings with Word2Vec</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/DeepLearning/DL-LongShortTerm.html"><span class="bold">Deep Learning
+            - Long Short Term Memory</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/DeepLearning/DL-RecurrentNN.html"><span class="bold">Deep Learning
+            - Recurrent Neural Network</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/DeepLearning/DL-VanishingGradient.html"><span class="bold">Deep
+            Learning - The Vanishing Gradient</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/DeepLearning/DeepLearning-7.html"><span class="bold">Introduction
+            to Deep Learning - Part 7</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/DeepLearning/DeepLearning-6.html"><span class="bold">Introduction
+            to Deep Learning - Part 6</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/DeepLearning/DeepLearning-5.html"><span class="bold">Introduction
+            to Deep Learning - Part 5</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/DeepLearning/DeepLearning-4.html"><span class="bold">Introduction
+            to Deep Learning - Part 4</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/DeepLearning/DeepLearning-3.html"><span class="bold">Introduction
+            to Deep Learning - Part 3</span></a></p>
+        </li>
+        <li>
           <p><a target="_blank" href="https://polarsparc.github.io/DeepLearning/DeepLearning-2.html"><span class="bold">Introduction
             to Deep Learning - Part 2</span></a></p>
         </li>
