--- a/index.html
+++ b/index.html
@@ -174,6 +174,25 @@
       </ul>
     </div>
     <div id="step-div">
+      <p>Cloud</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Cloud/Vault.html"><span class="bold">Hands-on with HashiCorp Vault
+            </span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Cloud/Envoy.html"><span class="bold">Introduction to Envoy</span>
+            </a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Cloud/Consul.html"><span class="bold">Hands-on with Consul</span></a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
       <p>Cryptography</p>
     </div>
     <br/>
@@ -200,7 +219,27 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Data/ApacheParquet.html"><span class="bold">Introduction to Apache
+          <p><a target="_blank" href="https://polarsparc.github.io/BigData/SQLAlchemy-3.html"><span class="bold">Introduction to
+            SQLAlchemy :: Part - 3</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/BigData/SQLAlchemy-2.html"><span class="bold">Introduction to
+            SQLAlchemy :: Part - 2</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/BigData/SQLAlchemy-1.html"><span class="bold">Introduction to
+            SQLAlchemy :: Part - 1</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/BigData/ApacheCalcite.html"><span class="bold">Introduction to Apache
+            Calcite</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/BigData/ApacheDrill.html"><span class="bold">Introduction to Apache
+            Drill</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/BigData/ApacheParquet.html"><span class="bold">Introduction to Apache
             Parquet</span></a></p>
         </li>
       </ul>
